--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy": "http://localhost:5000"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,4 +43,5 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
   }
+  
 }
